--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head><meta charset="utf-8"><title>html_practice</title></head>
-  <body><h1>Hello, GitHub ??</h1></body>
+    <head>
+        <title>penis sip</title>
+    </head>
+    <body>
+        <h1>PENISHOLE</h1>
+    </body>
 </html>
