--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>penis sip</title>
+        <title>who wants</title>
+        <style>
+            h1 {
+                color: red;
+                text-align: center;
+                background-color: black;
+                width: 100%;
+                height:200px;
+                font-size: 50px;
+            }
+        </style>
     </head>
     <body>
-        <h1>PENISHOLE</h1>
+        <h1>my PENIS</h1>
     </body>
 </html>
