--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>who wants</title>
         <style>
             h1 {
-                color: red;
+                color: blue;
                 text-align: center;
                 background-color: black;
                 width: 100%;
