--- a/index.html
+++ b/index.html
@@ -1,19 +1,73 @@
 <!DOCTYPE html>
-<html>
+<htrml>
     <head>
-        <title>who wants</title>
+        <title>Vox Home</title>
         <style>
-            h1 {
-                color: blue;
-                text-align: center;
-                background-color: black;
+            .header {
+                position: fixed;
                 width: 100%;
-                height:200px;
+                height: 65px;
+                background-color: black;
+                color: white;
+                font-size: 20px; 
+                z-index: 5;}
+            
+            .tab1 {
+                left: 50%;
+                top: 20px;
+                position: absolute; }
+
+            .tab2 {
+                left: 50px;
+                top: 20px;
+                position: absolute; }
+
+            .tab3 {
+                right: 50px;
+                top: 20px;
+                position: absolute; }
+
+            body {
+                margin: 0;
+                padding: 0; }
+
+
+            .rel {
+                position: relative;
+            }
+
+            .body_part {
+                position: absolute;
+                text-align: center;
+                width: 100%;
+                color: black;
                 font-size: 50px;
             }
+
+            .par {
+                font-size: 30px;
+                margin: 0 30%;
+                line-height: 50px;
+            }
+
         </style>
     </head>
     <body>
-        <h1>my PENIS</h1>
+        <div class="header">
+            <div class="tab1">HOME</div>
+            <div class="tab2">Shop</div>
+            <div class="tab3">about</div>
+        </div>
+        <div class="rel">
+            <div class="body_part">
+                <h1>VOX</h1>
+                <p class="par">
+                    Vox is a contemporary clothing brand that celebrates individuality and bold self-expression. Rooted in modern streetwear culture, Vox combines sleek design with high-quality fabrics to create apparel that is both stylish and comfortable. Each piece is crafted to stand out, reflecting the confident, forward-thinking attitude of those who wear it. 
+                    <br><br> From everyday essentials to statement items, Vox empowers its community to showcase their personality through fashion. At Vox, innovation meets timeless style. The brand draws inspiration from urban environments, music, and art, translating cultural trends into versatile clothing that transcends seasons. Attention to detail is at the core of every design, ensuring that each item is not only visually striking but also durable and practical. 
+                    <br><br> Whether its layering pieces for casual outings or bold accessories that complete a look, Vox delivers fashion that resonates with contemporary lifestyles. More than just clothing, Vox is a movement. It embodies a mindset of creativity, confidence, and inclusivity, inviting everyone to explore their unique style. With a commitment to sustainability and ethical production, Vox ensures that fashion-forward choices don’t come at the expense of the planet. By merging aesthetics, functionality, and purpose, Vox continues to redefine what it means to dress with intention and flair in today’s ever-evolving fashion landscape.<br><br>
+                </p>
+            </div>
+        </div>
+        <!--Footer w name and email, mailing adress-->
     </body>
-</html>
+</htrml>
